2008-09-05  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

	* src/actions/DocumentManagement.cc:
	Remove comment code.

2008-09-04  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.23.0 release.

2008-09-04  kitone  <kitone@gna.org>

	* src/actions/DocumentManagement.cc:
	* src/gui/Application.cc:
	* src/gui/Application.h:
	Remove auto-save code from Application.cc to DocumentManagement.cc.

2008-09-01  kitone  <kitone@gna.org>

	* src/we/WaveformRendererCairo.cc:
	Used Pango to display text.

2008-08-31  kitone  <kitone@gna.org>

	* configure.in:
	Patch by Luboš Staněk to blacklist glibmm version.
	Versions 2.16.0, 2.16.1 and 2.16.2.

2008-08-31  kitone  <kitone@gna.org>

	* src/gui/PreferencesUI.cc:
	* src/main.cc:
	Fix: "display-subtitle-text" group.

2008-08-30  kitone  <kitone@gna.org>

	* src/gui/Application.cc:
	Add "Timing Mode" to the tooltip.

2008-08-30  kitone  <kitone@gna.org>

	* src/Document.cc:
	* src/SubtitleFormat.cc:
	Throw EncodingConvertError when utf8_to_charset failed.

2008-08-28  kitone  <kitone@gna.org>

	* src/actions/DocumentManagement.cc:
	* src/gui/ComboBoxEncoding.cc:
	* src/gui/ComboBoxEncoding.h:
	* src/gui/DialogFileChooser.cc:
	* src/gui/DialogFileChooser.h:
	Improve the save dialog by selecting default values from document.

2008-08-27  kitone  <kitone@gna.org>

	* src/Error.h:
	New files for subtitle errors.

	* src/Document.cc:
	Better support of errors and messages.

	* src/SubtitleFormat.cc:
	* src/SubtitleFormat.h:
	Remove the class SubtitleException. 
	Used the news errors (Error.h).

	* src/actions/Transcript.cc:
	Catch any errors. (needs to be fixed)

	* src/SubtitleSystem.cc:
	* src/formats/SubtitleASS.cc:
	* src/formats/SubtitleEditorProject.cc:
	* src/formats/SubtitleEncoreNTSC.cc:
	* src/formats/SubtitleEncorePAL.cc:
	* src/formats/SubtitleMPL2.cc:
	* src/formats/SubtitleMPsub.cc:
	* src/formats/SubtitleMicroDVD.cc:
	* src/formats/SubtitleSSA.cc: